Add tests for basic subprotocol negotiation
Nothing fancy, just make sure that the dumb-increment plugin correctly
receives the subprotocol list and is able to select the one it wants.

--- a/test/test.conf
+++ b/test/test.conf
@@ -1,4 +1,8 @@
 <IfModule mod_websocket.c>
+  <Location /dumb-increment>
+    SetHandler websocket-handler
+    WebSocketHandler modules/mod_websocket_dumb_increment.so dumb_increment_init
+  </Location>
   <Location /echo>
     SetHandler websocket-handler
     WebSocketHandler modules/mod_websocket_echo.so echo_init
