Return 500 if no WebSocketHandler is configured

--- a/test/test.conf
+++ b/test/test.conf
@@ -1,12 +1,18 @@
 <IfModule mod_websocket.c>
+  <Location /bad-config>
+    SetHandler websocket-handler
+  </Location>
+
   <Location /dumb-increment>
     SetHandler websocket-handler
     WebSocketHandler modules/mod_websocket_dumb_increment.so dumb_increment_init
   </Location>
+
   <Location /echo>
     SetHandler websocket-handler
     WebSocketHandler modules/mod_websocket_echo.so echo_init
   </Location>
+
   <Location /echo-allow-reserved>
     SetHandler websocket-handler
     WebSocketHandler modules/mod_websocket_echo.so echo_init
