Allow Origin checks to be turned off
The WebSocketOriginCheck directive controls how Origin checks are done.
Same (the default) requires the Origin header to match the origin of the
opening handshake's request-target. Off turns off the Origin checks.

--- a/test/test.conf
+++ b/test/test.conf
@@ -18,4 +18,10 @@
     WebSocketHandler modules/mod_websocket_echo.so echo_init
     WebSocketAllowReservedStatusCodes On
   </Location>
+
+  <Location /no-origin-check>
+    SetHandler websocket-handler
+    WebSocketHandler modules/mod_websocket_echo.so echo_init
+    WebSocketOriginCheck Off
+  </Location>
 </IfModule>
