Allow users to specify a trusted Origin list
When using the new WebSocketOriginCheck Trusted mode, all Origins
specified by the WebSocketTrustedOrigin list will be allowed to connect,
and all others will be refused.

--- a/test/test.conf
+++ b/test/test.conf
@@ -24,4 +24,13 @@
     WebSocketHandler modules/mod_websocket_echo.so echo_init
     WebSocketOriginCheck Off
   </Location>
+
+  <Location /origin-whitelist>
+    SetHandler websocket-handler
+    WebSocketHandler modules/mod_websocket_echo.so echo_init
+
+    WebSocketOriginCheck Trusted
+    WebSocketTrustedOrigin http://origin-one https://origin-two:55
+    WebSocketTrustedOrigin https://origin-three
+  </Location>
 </IfModule>
