Fix autobahn dependencies
Upstream is having some dependency trouble:

   https://github.com/crossbario/autobahn-testsuite/issues/55

Lock txaio to 2.1.x for now.

Note that the unittest2 requirement is now correctly included in
upstream, so that hack has been removed.

--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,8 +1,8 @@
-autobahn>=0.10.7
-autobahntestsuite>=0.7.2
+autobahn~=0.10.7
+autobahntestsuite~=0.7.4
 psutil>=3.2.2
 pytest>=2.8.1
 pytest-twisted>=1.5
-unittest2
 tap.py>=1.7
+txaio~=2.1.0
 yamlish>=0.18.0
