Pin the PID file to the test directory
Some platforms have a different default PID file compiled in; change
that explicitly to the testing logs directory so that it doesn't
conflict.

--- a/test/httpd/test.conf
+++ b/test/httpd/test.conf
@@ -3,6 +3,7 @@
 #
 
 Listen 59153
+PidFile logs/httpd.pid
 
 LoadModule authn_core_module ${SYSTEM_MODULES_DIR}/mod_authn_core.so
 LoadModule authz_core_module ${SYSTEM_MODULES_DIR}/mod_authz_core.so
