Search for and use httpd directly in tests
Some distributions (e.g. Ubuntu) put so much hardcoded logic into
apachectl that we cannot use it to launch a standalone server reliably.
Switch to using httpd directly (which requires an additional bit of
configure logic) for tests. We may have to find a replacement for the
standard envvars fixup that apachectl did for us.

--- a/Makefile.in
+++ b/Makefile.in
@@ -7,6 +7,7 @@ CURDIR := $(abspath $(dir $(lastword $(MAKEFILE_LIST))))
 # Paths to tools (set by configure)
 APXS := @APXS@
 APACHECTL := @APACHECTL@
+HTTPD := @HTTPD@
 LIBTOOL := @LIBTOOL@
 
 # CFLAGS and LDFLAGS can be set during the make invocation.
@@ -93,5 +94,5 @@ $(TEST_MODULES_ALL_PATHS):
 
 start-test-server: test-modules test-folders
 start-test-server stop-test-server:
-	SYSTEM_MODULES_DIR=$(MODULES_DIR) $(APACHECTL) -d "$(CURDIR)/test/httpd" \
+	SYSTEM_MODULES_DIR=$(MODULES_DIR) $(HTTPD) -d "$(CURDIR)/test/httpd" \
 		-f test.conf -k $(patsubst %-test-server,%,$@)
