Don't load builtin modules in the test server
Check for the presence of the modules we load during testing before
explicily calling LoadModule; otherwise we will fail to launch if the
distro has statically compiled those modules into the server.

--- a/test/httpd/test.conf
+++ b/test/httpd/test.conf
@@ -5,9 +5,15 @@
 Listen 59153
 PidFile logs/httpd.pid
 
-LoadModule authn_core_module ${SYSTEM_MODULES_DIR}/mod_authn_core.so
-LoadModule authz_core_module ${SYSTEM_MODULES_DIR}/mod_authz_core.so
-LoadModule unixd_module ${SYSTEM_MODULES_DIR}/mod_unixd.so
+<IfModule !authn_core_module>
+  LoadModule authn_core_module ${SYSTEM_MODULES_DIR}/mod_authn_core.so
+</IfModule>
+<IfModule !authz_core_module>
+  LoadModule authz_core_module ${SYSTEM_MODULES_DIR}/mod_authz_core.so
+</IfModule>
+<IfModule !unixd_module>
+  LoadModule unixd_module ${SYSTEM_MODULES_DIR}/mod_unixd.so
+</IfModule>
 
 LoadModule websocket_module modules/mod_websocket.so
 
