Make MaxMessageSize apply to messages, not frames
Messages larger than MaxMessageSize were previously allowed as long as
each individual frame was smaller than the limit. Keep a running total
of the message length as frames come in so that we can correctly reject
these messages.

--- a/test/httpd/test.conf.in
+++ b/test/httpd/test.conf.in
@@ -66,3 +66,10 @@ DocumentRoot htdocs
   WebSocketTrustedOrigin http://origin-one https://origin-two:55
   WebSocketTrustedOrigin https://origin-three
 </Location>
+
+<Location /size-limit>
+  SetHandler websocket-handler
+  WebSocketHandler modules/mod_websocket_echo.so echo_init
+
+  MaxMessageSize 4
+</Location>
