Add a test helper script for Windows
The setup-win-test PowerShell script helps Windows users set up their
system for testing. It generates a test.conf and the supporting
directories needed for the test server. Instructions for its use have
been added to test/README.md.

--- a/test/httpd/test.conf.in
+++ b/test/httpd/test.conf.in
@@ -13,9 +13,9 @@ PidFile logs/httpd.pid
 @conf_24@<IfModule !authz_core_module>
 @conf_24@  LoadModule authz_core_module "@system_modules_dir@/mod_authz_core.so"
 @conf_24@</IfModule>
-@conf_24@<IfModule !unixd_module>
-@conf_24@  LoadModule unixd_module "@system_modules_dir@/mod_unixd.so"
-@conf_24@</IfModule>
+@conf_24@@conf_unix@<IfModule !unixd_module>
+@conf_24@@conf_unix@  LoadModule unixd_module "@system_modules_dir@/mod_unixd.so"
+@conf_24@@conf_unix@</IfModule>
 
 LoadModule websocket_module modules/mod_websocket.so
 
