Always uncomment the mod_unixd load on Linux
The new @conf_unix@ comment variable used in Windows testing needs to be
set to the empty string on Linux.

--- a/configure.ac
+++ b/configure.ac
@@ -109,6 +109,7 @@ AC_MSG_RESULT([$httpd_version])
 
 AC_SUBST(conf_22)
 AC_SUBST(conf_24)
+AC_SUBST(conf_unix, "")
 
 # Define the template-generated files.
 AC_CONFIG_FILES([
