Prepare module for activation during `make install`
`make install` now passes the -A option to apxs, which causes it to add
a (commented for later use) LoadModule line to the configuration. This
mirrors the CMake installation behavior.

--- a/Makefile.in
+++ b/Makefile.in
@@ -33,7 +33,7 @@ EXAMPLE_INSTALLS := $(addprefix install-,$(EXAMPLE_NAMES))
 all: mod_websocket.la examples
 
 install: mod_websocket.la
-	$(APXS) -i $<
+	$(APXS) -i -A $<
 
 clean:
 	rm -f *.lo *.la *.slo *.o
